--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "cropit",
-  "main": "dist/jquery.cropit.js",
+  "main": "dist/cropit.js",
   "description": "Customizable crop and zoom.",
-  "version": "0.5.1",
+  "version": "0.0.1",
   "author": {
-    "name": "Scott Cheng",
-    "email": "me@scottcheng.com",
-    "url": "http://scottcheng.com"
+    "name": "Saranga Abeykoon",
+    "email": "amisaranga@gmail.com",
+    "url": "https://github.com/nterms"
   },
   "keywords": [
     "crop",
     "zoom",
     "image editor"
   ],
-  "homepage": "http://scottcheng.github.io/cropit",
+  "homepage": "http://nterms.github.io/cropit",
   "repository": {
     "type": "git",
-    "url": "git://github.com/scottcheng/cropit.git"
+    "url": "git://github.com/nterms/cropit.git"
   },
   "bugs": {
-    "url": "https://github.com/scottcheng/cropit/issues"
+    "url": "https://github.com/nterms/cropit/issues"
   },
   "license": "MIT",
   "scripts": {
@@ -47,7 +47,6 @@
     ]
   },
   "dependencies": {
-    "jquery": ">=1.9"
   },
   "devDependencies": {
     "babel-core": "~5.5.8",
